# learn-apigateway

./: .editorconfig  .gitignore  Dockerfile.orders  README.md  Taskfile.yml  compose.yml  gql_client.py  jwt_generator.py  oas.yaml  pyproject.toml  schema.gql
backend1/: alembic.ini  database.py  models.py
backend1/alembic/: env.py
backend1/alembic/versions/: 6bdcd77da790_backend1_db_initialize.py
backend1/data/: backend1.db
kitchen/: app.py  config.py  oas.yaml
kitchen/api/: api.py  schemas.py
orders/: alembic.ini  app.py  orders.db
orders/Web/: app.py  oas.yaml
orders/Web/api/: api.py  auth.py  schemas.py
orders/api/: api.py  schemas.py
orders/migrations/: env.py
orders/migrations/versions/: 72cbbcf82090_initial_migration.py  7c2d2fea8f97_add_user_id_to_order_table.py  9f0d1a33406c_initial_migration.py  ae8d6c8e7baa_initial_migration.py
orders/orders_service/: exceptions.py  orders.py  orders_service.py
orders/repository/: models.py  orders_repository.py  unit_of_work.py
payments/: oas.yaml
products/: server.py
products/Web/: data.py  mutations.py  queries.py  schema.gql  schema.py  types.py
ui/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.vue  interfaces.ts  main.ts
ui/src/components/: Footer.vue  Header.vue  OrderDetailDialog.vue  OrderTable.vue  ProductCard.vue
ui/src/router/: index.ts
ui/src/views/: About.vue  Account.vue  Home.vue  Menu.vue  MyPage.vue
